reverse-grpc/01-reverse-grpc-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: reverse-grpc
  name: reverse-grpc
  namespace: envoy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: reverse-grpc
  template:
    metadata:
      labels:
        app: reverse-grpc
    spec:
      containers:
      - name: reverse-grpc
        image: gzaidman/reverse-grpc
        imagePullPolicy: Always
        resources: {}
        env:
        - name: "PORT"
          value: "8081"
        ports:
        - containerPort: 8081
          protocol: TCP
        readinessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8081"]
          initialDelaySeconds: 1
        livenessProbe:
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8081"]
          initialDelaySeconds: 1
      - name: envoy
        image: envoyproxy/envoy:v1.21.0
        resources: {}
        ports:
        - name: https
          containerPort: 8786
        - name: admin
          containerPort: 8090
        volumeMounts:
        - name: config
          mountPath: /etc/envoy
      volumes:
        - name: config
          configMap:
            name: envoy-reverse-grpc
